--- a/Welcome.html
+++ b/Welcome.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ClearInSight</title>
     <!-- link start -->
+    <link rel="stylesheet" href="css/basic/normalize.css">
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/signin.css">
     <link rel="stylesheet" href="css/basic/basic.css">
