--- a/index.html
+++ b/index.html
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Hello</title>
+    <meta charset="UTF-8">
+    <title>ClearInSight</title>
+    <!-- link start -->
+    <link rel="stylesheet" href="css/basic/normalize.css">
+    <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/basic/basic.css">
+    <link rel="stylesheet" href="css/signin.css">
+
+    <script src="js/basic/jquery-latest.js"></script>
+    <script src="js/basic/jquery.jsonp.js"></script>
+    <script src="js/basic/d3.v3.min.js"></script>
+    <script src="js/basic/basic.js"></script>
+    <script src="js/basic/ajax.js"></script>
+    <script src="js/signin.js"></script>
+    <!-- link end -->
+
 </head>
 <body>
-	<h3>Hello,nihao </h3>
+<div class="Welcome">
+    <div class="SignIn" style="display: flex">
+        <div class="input-group">
+            <span class="input-addonleft"><i class="glyphicon glyphicon-envelope"></i></span>
+            <input autofocus="autofocus" type="email" class="form-control" placeholder="example@cz-tek.com">
+            <span class="input-group-addon" style="visibility:hidden;"><i></i></span>
+        </div>
 
-	<ul>
-		<li>1NiHao</li>
-		<li>2NiHao</li>
-		<li>3NiHao</li>
-		<li>4NiHao</li>
-		<li>5NiHao</li>
-	</ul>
+        <div class="input-group">
+            <span class="input-addonleft"><i class="glyphicon glyphicon-lock"></i></span>
+            <input type="password" class="form-control" placeholder="Private Password">
+            <span class="input-group-addon" style="visibility: hidden"><i></i></span>
+        </div>
+
+        <button class="BtnSubmit" onclick="SignIn()">Sign In</button>
+    </div>
+
+    <div class="RgAndFGTPass">
+        <a onclick="RegisterShow('block')" href="#"><strong>New Here</strong></a>
+        <em>&nbsp;Or&nbsp;</em>
+        <a onclick="ForgetPasswordShow('block')" href="#"><strong>Forget Password?</strong></a>
+    </div>
+</div>
+
+<div class="footer">© 2011-2016
+    <a href="#">上海伊弗信息科技有限公司</a>
+    . All Rights Reserved.
+</div>
 </body>
 </html>
