--- a/Html/LockScreen.html
+++ b/Html/LockScreen.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <title>LockScreen</title>
     <!-- link start -->
-    <link rel="stylesheet" href="../../css/nav.css">
-    <link rel="stylesheet" href="../../bootstrap-3.3.5-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../../css/lockscreen.css">
-    <script src="../../js/basic/jquery-latest.js"></script>
-    <script src="../../js/basic/basic.js"></script>
-    <script src="../../js/basic/ajax.js"></script>
-    <script src="../../js/nav.js"></script>
-    <script src="../../js/lockscreen.js"></script>
+    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../bootstrap-3.3.5-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../css/lockscreen.css">
+    <script src="../js/basic/jquery-latest.js"></script>
+    <script src="../js/basic/jquery.cookie.js"></script>
+    <script src="../js/basic/basic.js"></script>
+    <script src="../js/basic/ajax.js"></script>
+    <script src="../js/nav.js"></script>
+    <script src="../js/lockscreen.js"></script>
     <!-- link end -->
 
 </head>
@@ -20,7 +21,7 @@
     <div class="ShowLockMsg">
         <h2>ClearInSight</h2>
         <div class="LockContent">
-            <img src="../../images/user.jpg" alt="Users">
+            <img src="../images/user.jpg" alt="Users">
 
             <div class="LockContentText">
                 <h3>NickName</h3>
@@ -29,7 +30,7 @@
                     <input type="password">
                     <i class="glyphicon glyphicon-circle-arrow-right"></i>
                 </div>
-                <a href="../../Welcome.html">Not Nickname?</a>
+                <a href="../index.html">Not Nickname?</a>
             </div>
         </div>
     </div>
