--- a/Html/MyKPI.html
+++ b/Html/MyKPI.html
@@ -2,29 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>KPIManagement</title>
+    <title>MyKPI</title>
     <!-- link start -->
-    <link rel="stylesheet" href="../../bootstrap-3.3.5-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../../css/basic/basic.css">
-    <link rel="stylesheet" href="../../css/nav.css">
-    <link rel="stylesheet" href="../../css/KPIManagement.css">
-    <script src="../../js/basic/jquery-latest.js"></script>
-    <script src="../../js/basic/ajax.js"></script>
-    <script src="../../js/nav.js"></script>
+    <link rel="stylesheet" href="../bootstrap-3.3.5-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../css/basic/basic.css">
+    <link rel="stylesheet" href="../css/nav.css">
+
+    <script src="../js/basic/jquery-latest.js"></script>
+    <script src="../js/basic/jquery.cookie.js"></script>
+    <script src="../js/basic/basic.js"></script>
+    <script src="../js/basic/ajax.js"></script>
+    <script src="../js/nav.js"></script>
     <!-- link end -->
 
 </head>
 <body>
+<div class="GetTopNavContent"></div>
 
-<!--top Nav-->
-<div class="topNav">
+<!--<div class="topNav">
     <div class="topleftNav">
         <img src="../../images/logo.png" alt="ClearInSight">
         <ul>
-            <li><a href="../MyKPI/MyKPI.html"><!--<i class="glyphicon glyphicon-bullhorn"></i>-->My KPI</a></li>
-            <li><a href="KPIManagement.html"><!--<i class="glyphicon glyphicon-stats"></i>-->
+            <li><a href="MyKPI.html">&lt;!&ndash;<i class="glyphicon glyphicon-bullhorn"></i>&ndash;&gt; My KPI</a></li>
+            <li><a href="../KPIManagement/KPIManagement.html">&lt;!&ndash;<i class="glyphicon glyphicon-stats"></i>&ndash;&gt;
                 Management</a></li>
-            <li><a href="../MyTasks/MyTasks.html"><!--<i class="glyphicon glyphicon-tasks"></i>-->My Tasks</a></li>
+            <li><a href="../MyTasks/MyTasks.html">&lt;!&ndash;<i class="glyphicon glyphicon-tasks"></i>&ndash;&gt;My Tasks</a></li>
         </ul>
     </div>
 
@@ -111,6 +113,7 @@
                         <i class="glyphicon glyphicon-exclamation-sign">
                             <span class="badge">1</span>
                         </i></a>
+
                     <div class="NavAbnormalShow">
                         <i class="glyphicon glyphicon-triangle-top"></i>
                         <h5>Here is the Abnormal Message.</h5>
@@ -146,55 +149,47 @@
         <div class="nickname">
             <img src="../../images/user.jpg" alt="Users">
             <h4>Nickname</h4>
-            <!--<i class="glyphicon glyphicon-triangle-bottom"></i>-->
+            &lt;!&ndash;<i class="glyphicon glyphicon-triangle-bottom"></i>&ndash;&gt;
+        </div>
+
+        <div class="shownickname">
+            <i class="glyphicon glyphicon-triangle-top"></i>
+
+            <div class="nicknamecontent">
+                <ul>
+                    <li><a href="#">
+                        <i class="glyphicon glyphicon-cog"></i>
+                        Management</a>
+                    </li>
+                    <hr>
+                    <li><a href="#">
+                        <i class="glyphicon glyphicon-pencil"></i>
+                        Profile</a></li>
+                    <hr>
+                    <li><a href="../NickName/LockScreen.html">
+                        <i class="glyphicon glyphicon-lock"></i>
+                        LockScreen</a></li>
+                    <hr>
+                    <li><a href="../../index.html">
+                        <i class="glyphicon glyphicon-log-out"></i>
+                        Log Out</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="nkcmanagement">
+            <i class="glyphicon glyphicon-triangle-right"></i>
+
+            <div class="nkcmDepartment">
+                <a href="#"><i class="glyphicon glyphicon-th-large"></i>Department</a>
+            </div>
+            <hr>
+            <div class="nkcmusers">
+                <a href="#"><i class="glyphicon glyphicon-user"></i>Users</a>
+            </div>
         </div>
     </div>
-
-    <div class="shownickname">
-        <i class="glyphicon glyphicon-triangle-top"></i>
-
-        <div class="nicknamecontent">
-            <ul>
-                <li><a href="#">
-                    <i class="glyphicon glyphicon-cog"></i>
-                    Setting</a>
-                </li>
-                <hr>
-                <li><a href="#">
-                    <i class="glyphicon glyphicon-user"></i>
-                    Profile</a></li>
-                <hr>
-                <li><a href="../NickName/LockScreen.html">
-                    <i class="glyphicon glyphicon-lock"></i>
-                    LockScreen</a></li>
-                <hr>
-                <li><a href="../../Welcome.html">
-                    <i class="glyphicon glyphicon-log-out"></i>
-                    Log Out</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-<!--<h3>Here is The KPI Management</h3>-->
-<div class="LeftNav">
-    <h3>KPI Assistant</h3>
-    <hr>
-    <ul>
-        <li><a href="#">All</a></li>
-        <hr/>
-        <li><a href="#">Followed</a></li>
-        <hr/>
-        <li><a href="#">Created</a></li>
-        <hr/>
-        <li>
-            <button class="BtnSubmit">Create</button>
-        </li>
-    </ul>
-</div>
-
-<div class="RightContent">
-    <h3>Here is the Content.</h3>
-</div>
+</div>-->
+<h3 style="margin: 100px 0 0 0">Here is the My KPI.</h3>
 </body>
 </html>
