--- a/Html/NavDemo.html
+++ b/Html/NavDemo.html
@@ -177,11 +177,11 @@
             <i class="glyphicon glyphicon-triangle-right"></i>
 
             <div class="nkcmDepartment">
-                <a href="#"><i class="glyphicon glyphicon-th-large"></i>Department</a>
+                <a href="Department.html"><i class="glyphicon glyphicon-th-large"></i>Department</a>
             </div>
             <hr>
             <div class="nkcmusers">
-                <a href="#"><i class="glyphicon glyphicon-user"></i>Users</a>
+                <a href="Users.html"><i class="glyphicon glyphicon-user"></i>Users</a>
             </div>
         </div>
     </div>
