--- a/Html/KPIManagement.html
+++ b/Html/KPIManagement.html
@@ -14,6 +14,7 @@
     <script src="../js/basic/basic.js"></script>
     <script src="../js/basic/ajax.js"></script>
     <script src="../js/nav.js"></script>
+    <script src="../js/kpimanagement.js"></script>
     <!-- link end -->
 
 </head>
@@ -28,19 +29,15 @@
     <hr>
     <ul>
         <li><a href="#">All</a></li>
-        <hr/>
-        <li><a href="#">Followed</a></li>
-        <hr/>
         <li><a href="#">Created</a></li>
-        <hr/>
-        <li>
-            <button class="BtnSubmit">Create</button>
-        </li>
+        <li><a href="#">Followed</a></li>
     </ul>
+    <button class="BtnSubmit">Create</button>
 </div>
 
 <div class="RightContent">
-    <h3>Here is the Content.</h3>
+    <ul>
+    </ul>
 </div>
 </body>
 </html>
