--- a/Html/KPIManagement.html
+++ b/Html/KPIManagement.html
@@ -28,7 +28,7 @@
     <h3>KPI Assistant</h3>
     <hr>
     <ul>
-        <li><a href="#">All</a></li>
+        <li class="IsClick"><a href="#">All</a></li>
         <li><a href="#">Created</a></li>
         <li><a href="#">Followed</a></li>
     </ul>
