--- a/Html/CreateKPI.html
+++ b/Html/CreateKPI.html
@@ -2,42 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>KPIManagement</title>
+    <title>CreateKpi</title>
     <!-- link start -->
     <link rel="stylesheet" href="../bootstrap-3.3.5-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../css/basic/basic.css">
     <link rel="stylesheet" href="../css/nav.css">
-    <link rel="stylesheet" href="../css/KPIManagement.css">
+    <link rel="stylesheet" href="../css/createkpi.css"/>
 
     <script src="../js/basic/jquery-latest.js"></script>
     <script src="../js/basic/jquery.cookie.js"></script>
     <script src="../js/basic/basic.js"></script>
     <script src="../js/basic/ajax.js"></script>
     <script src="../js/nav.js"></script>
-    <script src="../js/kpimanagement.js"></script>
+    <script src="../js/createkpi.js"></script>
     <!-- link end -->
-
 </head>
 <body>
 
-<!--top Nav-->
-<div class="GetTopNavContent"></div>
+<h3 style="margin-left:20px">Create KPI</h3>
 
-<!--<h3>Here is The KPI Management</h3>-->
-<div class="LeftNav">
-    <h3>KPI Assistant</h3>
-    <hr>
-    <ul>
-        <li class="IsClick"><a href="#">All</a></li>
-        <li><a href="#">Created</a></li>
-        <li><a href="#">Followed</a></li>
-    </ul>
-    <button class="BtnSubmit Create">Create</button>
-</div>
-
-<div class="RightContent">
-    <ul>
-    </ul>
-</div>
 </body>
 </html>
